home-cluster/external-secrets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    kubernetes.io/metadata.name: external-secrets
